syntax = "proto3";

package com.sky.backend.grpc.pi;

option java_multiple_files = true;

service PiAccess{

  rpc boardInfo (GeneralRequest) returns (BoardInfoResponse);

  rpc switch(SwitchState) returns (GeneralResponse);

  rpc pwm(PwmRequest) returns (GeneralResponse);

  rpc blink(BlinkRequest) returns  (GeneralResponse);

  rpc listenDigitalInput(GeneralRequest) returns  (GeneralResponse);

  rpc shutdownServer(GeneralRequest) returns (GeneralResponse);
}

message GeneralRequest{
  string deviceID = 1;
}

message GeneralResponse{
  bool isCommandSuccess = 1;
}

message BoardInfoResponse{
  string make = 1;
  string model = 2;
  int32 memory = 3;
  string libraryPath = 4;
  float adcVRef = 5;
}

message SwitchState{
  bool isOn = 1;
  int32 pinNo = 2;
}

message PwmRequest{
  int32 pin = 1;
  float dutyCycle = 2;
  int32 frequency = 3;
}

message BlinkRequest{
  int32 pin = 1;
  int32 wavePeriod = 2;
  float highTime = 3;
}